--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
+/* ===== font import ===== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
     font-family: 'Poppins', sans-serif;
     position: relative;
 }
+
+
+/* ===== common css ends ===== */
 
 .input-group{
     padding: 30px !important;
