--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,13 @@ body {
 }
 
 /* ===== css style ends */
+
+
+/* ===== media query css */
+@media screen and (max-width: 700px) {
+
+    .input-group {
+        width: 80% !important;
+        padding: 10px !important;
+    }
+}
